--- a/client/search.html
+++ b/client/search.html
@@ -1,5 +1,5 @@
 <template name="searchField">
-	<div class="form-group {{#unless inlineResults}}dropdown{{/unless}}" 
+	<div class="mb-3 {{#unless inlineResults}}dropdown{{/unless}}" 
   style="">
 		{{#if equals type "button"}}
 		  <button class="btn btn-light" data-bs-toggle="dropdown">
