--- a/client/wikipage.html
+++ b/client/wikipage.html
@@ -131,7 +131,7 @@
 		{{/each}}
 		<h5>Neue Wikiseite anlegen</h5>
 		<form class="" id="new-wikipage">
-			<div class="form-group">
+			<div class="mb-3">
 				<div class="form-inline">
 					<input type="text" class="wiki-page-name" placeholder="Name der Wikiseite">
 					<button type="submit" class="btn btn-primary">Seite anlegen</button>
