--- a/imports/client/admin/admin.html
+++ b/imports/client/admin/admin.html
@@ -34,7 +34,7 @@
               <h5>Konfiguration</h5>
             </div>
             <div class="card-body">
-              <div class="form-group row">
+              <div class="mb-3 row">
                 <label class="col-12 col-sm-2 col-form-label">Links in der Titelleiste</label>
                 {{#each settings.objectHeaderLinks.links}}
                   <div class="col-12 col-sm-2 {{#if loggedIn}}{{#if loggedOut}}text-success{{else}}text-warning{{/if}}{{else}}{{#if loggedOut}}text-info{{/if}}{{/if}}">
@@ -54,7 +54,7 @@
                 </div>
               </div>
               <form class="form-horizontal direct-admin">
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Zuordnung der <a href="/wikipage">Wikiseiten</a></label>
                   <div class="dropdown col-sm-2 wiki-association">
                     <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="true">
@@ -122,7 +122,7 @@
                     </ul>
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Design</label>
                   <div class="dropdown col-sm-2">
                     <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="true">
@@ -147,7 +147,7 @@
                     <input name="themeColor" type="color" class="form-control" value="{{settings.themeColor}}" placeholder="Primärfarbe" title="Primärfarbe">
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Bilder</label>
                   {{#each imageProperties}}
                     <div class="col-sm-2">
@@ -158,7 +158,7 @@
                     </div>
                   {{/each}}
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Optionen</label>
                   <div class="col-sm-10">
                     <label class="radio-inline">
@@ -167,7 +167,7 @@
                     </label>
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Registrierung</label>
                   <div class="col-sm-8">
                     <label class="radio-inline">
@@ -187,7 +187,7 @@
                     <input name="sitePassword" class="form-control" value="" placeholder="Registrierungspasswort" title="Registrierungspasswort">
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">E-Mail</label>
                   <div class="col-sm-2">
                     <input name="emailServer" class="form-control" value="{{settings.emailServer}}" placeholder="smtp://mail.server.de" title="SMTP Server">
@@ -207,7 +207,7 @@
                     </button>
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Bezeichner</label>
                   <div class="col-sm-3">
                     <input name="siteTitle" class="form-control" value="{{settings.siteTitle}}" placeholder="Seitentitel" title="Seitentitel">
@@ -231,32 +231,32 @@
                     <input name="multiplePlayers" class="form-control" value="{{settings.multiplePlayers}}" placeholder="Mehrere Spieler" title="Mehrere Spieler">
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Divisionen</label>
                   <div class="col-sm-10">
                     <input name="arrayDivisions" class="form-control" value="{{settings.arrayDivisions}}" placeholder="a,b,c">
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Kategorien</label>
                   <div class="col-sm-10">
                     <input name="arrayCategorys" class="form-control" value="{{settings.arrayCategorys}}" placeholder="a,b,c">
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Untergründe</label>
                   <div class="col-sm-10">
                     <input name="arraySurfaces" class="form-control" value="{{settings.arraySurfaces}}" placeholder="a,b,c">
                   </div>
                 </div>
-                <div class="form-group row">
+                <div class="mb-3 row">
                   <label class="col-sm-2 col-form-label">Vereinsstatii</label>
                   <div class="col-sm-10">
                     <input name="arrayClubStates" class="form-control" value="{{settings.arrayClubStates}}" placeholder="a,b,c">
                   </div>
                 </div>
                 {{#each additionalAdminPageTemplates}}
-                  <div class="form-group row">
+                  <div class="mb-3 row">
                     <label class="col-sm-2 col-form-label">{{this.name}}</label>
                     {{>Template.dynamic template=this.template}}
                   </div>
