--- a/packages/hatinfo/client/hat.html
+++ b/packages/hatinfo/client/hat.html
@@ -54,7 +54,7 @@
                             <span class="fa fa-envelope"></span> Mail an alle
                         </a>
                         <form class="form-inline">
-                            <div class="form-group">
+                            <div class="mb-3">
                                 <label for="participant-filter">Teilnehmer filtern</label>
                                 <input type="text" class="form-control participant-filter" id="participant-filter" placeholder="">
                             </div>
