--- a/imports/client/files/files.html
+++ b/imports/client/files/files.html
@@ -267,27 +267,27 @@
                                     {{/if}}
                                 </div>
                                 <div class="col-12 col-sm-6 form">
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <label>Typ</label>
                                         <div class="form-control-plaintext">{{type}}</div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <label>Größe</label>
                                         <div class="form-control-plaintext">{{formatFileSize size}}</div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <label>Geändert am</label>
                                         <div class="form-control-plaintext">{{formatDateTime created}} </div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <label>Erstellt von</label>
                                         <div class="form-control-plaintext">{{getAlias creator}}</div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <label>Tags</label>
                                         <div class="form-control-plaintext">{{#each tags}} {{this}} {{/each}}</div>
                                     </div>
-                                    <div class="form-group">
+                                    <div class="mb-3">
                                         <label>Club</label>
                                         <div class="form-control-plaintext">{{club}}</div>
                                     </div>
