--- a/client/ultisite.html
+++ b/client/ultisite.html
@@ -51,7 +51,7 @@
 <body></body>
 
 <template name="baseLayout">
-	<div class="ultisite-{{settings.design}} base-layout {{#if settings.imageTitleImage}}with-title-image{{/if}}">
+	<div class="ultisite-root base-layout {{#if settings.imageTitleImage}}with-title-image{{/if}}">
 		{{> header}}
 		{{#if screenSizeMobile}}
 			{{> sidebar}}
