--- a/private/mail-templates/static-layout.html
+++ b/private/mail-templates/static-layout.html
@@ -1,4 +1,4 @@
-<div id="serverRendered" style="position: absolute;top:0px;z-index:10000" class="ultisite-{{settings.design}} base-layout">
+<div id="serverRendered" style="position: absolute;top:0px;z-index:10000" class="ultisite-root base-layout">
   <div class="text-center text-muted" style="padding:25px;">
     <span class="fa fa-spinner fa-spin fa-3x"></span>
     <h2>
