fixd some icons and team creation

--- a/client/header.html
+++ b/client/header.html
@@ -9,9 +9,8 @@
 		{{/unless}}
 
 		<div class="header-group col-2 d-block d-md-none">
-			<a href="#" class="header-link action-toggle-sidebar">
+			<a href="#" class="header-link action-toggle-sidebar" title="Toggle navigation">
 				<span class="{{#if AdminNotifications.count}}text-info{{/if}} fa fa-bars fa-lg"></span>
-				<span class="sr-only">Toggle navigation</span>
 			</a>
 		</div>
 		<div class="header-group d-none d-md-block col-md-9 col-lg-10">
