--- a/imports/client/user/userlist.html
+++ b/imports/client/user/userlist.html
@@ -3,8 +3,7 @@
     <div class="card user-list">
       <div class="card-header">
         <button class="btn btn-light action-create-user" style="margin-left:5px;margin-top:5px;">
-          <span class="fa fa-plus"></span>
-          <span class="fa fa-user"></span>
+          <span class="fa fa-user-add"></span>
           <span class="d-none d-sm-inline"> Neuen Nutzer anlegen</span>
         </button>
         <div class="float-end">
@@ -68,8 +67,7 @@
       </div>
       <div class="card-footer">
         <button class="btn btn-light action-create-user" style="margin-left:5px;margin-top:5px;">
-          <span class="fa fa-plus"></span>
-          <span class="fa fa-user"></span>
+          <span class="fa fa-user-add"></span>
           <span class="d-none d-sm-inline"> Neuen Nutzer anlegen</span>
         </button>
         <div class="float-end">
