fix header admin not visible

--- a/client/header.html
+++ b/client/header.html
@@ -13,7 +13,7 @@
 				<span class="{{#if AdminNotifications.count}}text-info{{/if}} fa fa-bars fa-lg"></span>
 			</a>
 		</div>
-		<div class="header-group d-none d-md-block col-md-9 col-lg-10">
+		<div class="header-group d-none d-md-block col-md-9 col-xl-10">
 			{{>navLinks}}
 		</div>
 		<div class="header-group col-8 d-block d-md-none">
@@ -38,7 +38,7 @@
 			{{/with}}
 		</div>
 
-		<div class="header-group col-2 col-md-3 col-lg-2 text-end">
+		<div class="header-group col-2 col-md-3 col-xl-2 text-end">
 			{{#if currentUser}}
 				<a href="#" class="header-link action-search {{#if equals routeName 'search'}}active{{/if}}">
 					<span class="fa fa-search fa-lg"></span>
