--- a/imports/client/tournaments/tournamentList.html
+++ b/imports/client/tournaments/tournamentList.html
@@ -23,6 +23,12 @@
                                         {{/if}}
                                     </span>
                                 </button>
+                                <button class="btn btn-link float-end action-add-tournament" type="button">
+                                    <span class="fa fa-plus"></span>
+                                    <span class="d-none d-md-inline">
+                                        Turnier anlegen
+                                    </span>
+                                </button>
                                 <strong class="btn-height-text">{{filterAsText}}</strong>
                             </div>
                             <div class="card-body {{#if showFilter}}active{{/if}} filter-container">
